# d4c

./: .gitignore  README.md  architecture.md  pyproject.toml
docs/superpowers/plans/: 2026-03-18-opencode-backend-bridge.md  2026-03-18-opencode-discord-bot.md
docs/superpowers/specs/: 2026-03-18-opencode-discord-bot-design.md
src/: bot.py  opencode_client.py  ws_client.py
src/cogs/: session_manager.py
src/ui/: progress_embed.py  question_view.py
src/utils/: debouncer.py
tests/: mock_ws_server.py
